Temporarily convert tassert(13002310) in IncrementalFeatureRolloutContext::set() to invariant to capture a core dump for BF-45368

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Overview

      IncrementalFeatureRolloutContext::set() trips tassert(13002310, "Refusing to replace an IFRContext whose egress metadata has already been cached") at src/mongo/db/ifr_context_decoration.cpp:75 — tracked as BF-45368. The tassert fires intermittently across many tasks/variants/projects but has resisted every attempted deterministic repro so far, and because a tassert logs its backtrace and then lets the process continue to a clean shutdown, no core dump is produced from any of the observed CI occurrences.

      Background

      BF-45368 has recurred at least 9 times across concurrency_sharded_replication_rate_limited and sharded_collections_jscore_passthrough_rate_limited on numerous variants/projects within a few days.

      Scope of Work

      * src/mongo/db/ifr_context_decoration.cpp — temporarily replace the tassert(13002310, ...) in IncrementalFeatureRolloutContext::set() with an invariant(...) carrying the same message, to force a crash (and core dump, where the variant collects one) instead of a tripwire-and-continue on hit.

      Technical Notes

      * Reverting to tassert(13002310, ...) before this PR (or a follow-up) is merged is required — this ticket exists purely to gather crash diagnostics, not to change production behavior.

            Assignee:
            Mickey Winters
            Reporter:
            Mickey Winters
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: