SERVER-133147 Temporarily convert tassert(13002310) to invariant for BF-45368 core dump capture (#60622)

GitOrigin-RevId: 4047cb8e28f666888c1c2bf6d4b0a5e6e54ef405